// TechMarket — Auth Service DB (MySQL)
// DB-per-service: тільки auth_* та role таблиці

Table auth_users {
  id char(36) [primary key]
  email varchar(255) [unique, note: 'Логін користувача']
  status varchar(50) [note: 'active, disabled, blocked']
  created_at datetime
  updated_at datetime
  // Опціональні зовнішні привʼязки (без FK між БД)
  customer_id char(36) [note: 'Ref: Orders DB (customers.id), без FK']
  employee_id char(36) [note: 'Ref: Orders DB (employees.id), без FK']
}

Table auth_credentials {
  id char(36) [primary key]
  user_id char(36) [unique, ref: > auth_users.id]
  password_hash varchar(255) [note: 'hash з сіллю у форматі PHC']
  algo varchar(50) [note: 'алгоритм хешування']
  password_updated_at datetime
  updated_at datetime
}

Table auth_tokens {
  id char(36) [primary key]
  user_id char(36) [ref: > auth_users.id]
  token_hash varchar(255) [note: 'хеш токена доступу']
  issued_at datetime
  expires_at datetime
  revoked boolean
  last_used_at datetime
  user_agent varchar(500)
  ip varchar(45)
  scopes varchar(255) [note: 'Опціонально: перелік scope через кому']

  Indexes {
    (user_id)
    (token_hash) [unique]
    (expires_at)
  }
}

Table roles {
  id char(36) [primary key]
  name varchar(50) [unique, note: 'ADMIN, SALES, CUSTOMER, BI_VIEWER']
  comment varchar(255)
}

Table user_roles {
  user_id char(36) [ref: > auth_users.id]
  role_id char(36) [ref: > roles.id]

  Indexes {
    (user_id, role_id) [unique]
    (role_id)
  }
}
